Change root path and clean docs
